k8s/prod/quakus-prod-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: quarkus-prod
  labels:
    name: quarkus-prod
