k8s/prod/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quarkus-app
  namespace: quarkus-prod
spec:
  replicas: 3
  selector:
    matchLabels:
      app: quarkus-app
  template:
    metadata:
      labels:
        app: quarkus-app
    spec:
      containers:
        - name: quarkus-app
          image: docker.io/arthurdbs/quarkus-rh:latest
          ports:
            - containerPort: 8080
      imagePullSecrets:
      - name: docker-hub-secret
